# SDL_Wolf3d

./: .gitignore  .gitignore.swp  CMakeLists.txt  Makefile  README.md  test.c
assets/sounds/: cemetery_gate.aiff
includes/: arr_2d.h  define.h  error.h  fps.h  garden.h  libft.h  mysdl.h  ray_cast.h  start.h  type.h  wolf3d.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lstsort.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_readonechar.c  ft_readonedig.c  ft_revstr.c  ft_skip_whitespace.c  ft_strcat.c  ft_strchr.c  (+28 more)
maps/: garden.w3d  test1.w3d  test2_texture.w3d  test3.w3d
sdl/lib/: libSDL2-2.0.0.dylib  libSDL2.la
sdl/lib/cmake/SDL2/: sdl2-config.cmake
sdl/lib/pkgconfig/: sdl2.pc
sdl/share/aclocal/: sdl2.m4
src/: action.c  arr_2d.c  calc_all.c  change_light_texture.c  combo_sort.c  dda.c  design_garden.c  design_start_scene.c  destruct_garden_scene.c  destruct_start_scene.c  draw_bar.c  draw_img.c  draw_line_wall.c  draw_sprite_stripe.c  error.c  event_hook_garden.c  exit.c  first_init_garden.c  fps.c  free_main.c  free_map.c  ft_ray_cast.c  ft_ray_cast_sprite.c  ft_sdl_close.c  ft_sdl_create_wnd_renderer.c  ft_sdl_event_hook.c  ft_sdl_init.c  ft_sdl_init_sound.c  ft_sdl_set_rect.c  ft_sdl_texture.c  ft_sdl_ttf.c  ft_sdl_update_window_size.c  garden.c  get_drop.c  get_map_size.c  init_all_scene.c  init_garden.c  init_sdl_insomnia.c  init_start_scene.c  load_assets_garden.c  (+23 more)
